--- a/myMapSite/ubike/static/ubike/css/youbike.css
+++ b/myMapSite/ubike/static/ubike/css/youbike.css
@@ -1,8 +1,20 @@
 /* stylesheet for ubikelinechart.html */
 
 
+
+#current-datetime{
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    border: 0px;
+    background: transparent;
+    font-size: 20pt;
+    color: lightgray;
+}
+
+
 html body{
-background-color: black;
+    background-color: black;
 }
 
 .searchButton .btn-primary{
@@ -13,50 +25,61 @@ background-color: black;
     border-color: #EAEAEA;
 }
 
+.map-container{
+    position: relative;
+}
+
+.map-container #slider{
+    position: absolute;
+    bottom: 2%;
+    width: 50%;
+    left: 5%;
+}
+
 #map{
-height: 604px;
-width: 70%;
-margin: 0px auto;
-float: left;
+    height: 604px;
+    width: 100%;
+    margin: 0px auto;
+    z-index: 0;
 }
 
 #curve_chart{
-float: left;
-width: 30%;
-height: 300px;
+    float: left;
+    width: 100%;
+    height: 300px;
 }
 
 #histogram_chart{
-float: left;
-width: 30%;
-height: 300px;
+    float: left;
+    width: 100%;
+    height: 300px;
 }
 
 div h1{
-text-align: center;
-color: gray;
-letter-spacing: 2px;
-font-family: -webkit-pictograph;
+    text-align: center;
+    color: gray;
+    letter-spacing: 2px;
+    font-family: -webkit-pictograph;
 }
 
 .station{
-float: left;
+    float: left;
 }
 
 .stationSet{
-list-style: none;
-float: left;
+    list-style: none;
+    float: left;
 }
 
 button{
-float: left;
+    float: left;
 }
 
 .chart{
-border-top-width: 1px;
-border-top: solid;
-border-color: gray;
-background-color: #0A0A0A;
+    border-top-width: 1px;
+    border-top: solid;
+    border-color: gray;
+    background-color: #0A0A0A;
 }
 
 
