--- a/myMapSite/ubike/static/ubike/css/youbike.css
+++ b/myMapSite/ubike/static/ubike/css/youbike.css
@@ -1,6 +1,17 @@
 /* stylesheet for ubikelinechart.html */
 
-
+#loading {
+    color: lightgray;
+    text-align: center;
+    position: fixed;
+    padding: 25%;
+    width: 100%;
+    height: 100%;
+    background: #000 url(ubike/icon/loading.gif) center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: 1000;
+}
 
 #current-datetime{
     position: absolute;
